rabbitmq-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      volumes:
        - name: rabbit-nfs
          persistentVolumeClaim:
            claimName: rabbit-nfs
      containers:
        - name: rabbit
          image: rabbitmq:management
          ports:
            - containerPort: 5671
            - containerPort: 15672
          volumeMounts:
            - name: rabbit-nfs
              mountPath: /var/lib/rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: NodePort
  ports:
    - port: 5672
      protocol: TCP
  selector:
    app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  labels:
    app: rabbitmq
spec:
  type: NodePort
  ports:
    - port: 15672
      protocol: TCP
  selector:
    app: rabbitmq
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik"
  name: jenkins
spec:
  rules:
  - host: rabbit-mgmt.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq-management
          servicePort: 15672
